# llama.cpp

./: CMakeLists.txt  ggml-ascend.cpp  ggml-ascend.h  ggml-backend.c  ggml-cuda.cu  ggml.c  ggml.h  llama.cpp
ggml-Ascend/: CMakeLists.txt  aclnn-add-test.cpp  aclnn-add.cpp  aclnn-add.h  aclnn-arange.cpp  aclnn-clamp.cpp  aclnn-clamp.h  aclnn-comp.cpp  aclnn-comp.h  aclnn-compute-test.cpp  aclnn-compute.cpp  aclnn-compute.h  aclnn-cpy-test.cpp  aclnn-cpy.cpp  aclnn-cpy.h  aclnn-div.cpp  aclnn-div.h  aclnn-im2col.cpp  aclnn-leaky.cpp  aclnn-leaky.h  aclnn-math.cpp  aclnn-math.h  aclnn-mul-test.cpp  aclnn-mul.cpp  aclnn-mul.h  aclnn-norm.cpp  aclnn-norm.h  aclnn-operator.cpp  aclnn-operator.h  aclnn-permute.cpp  aclnn-permute.h  aclnn-repeat.cpp  aclnn-repeat.h  aclnn-rope.cpp  aclnn-rope.h  aclnn-sort.cpp  aclnn-sort.h  aclnn-sqrt.cpp  aclnn-test.cpp  aclnn-test.h  (+31 more)
ggml-Ascend/common/: Makefile  cmake_install.cmake
ggml-Ascend/examples/: CTestTestfile.cmake  Makefile  cmake_install.cmake
ggml-Ascend/examples/baby-llama/: CTestTestfile.cmake  Makefile  cmake_install.cmake
ggml-Ascend/examples/batched/: CTestTestfile.cmake  Makefile  cmake_install.cmake
ggml-Ascend/examples/batched-bench/: CTestTestfile.cmake  Makefile  cmake_install.cmake
ggml-Ascend/examples/benchmark/: CTestTestfile.cmake  Makefile  cmake_install.cmake
ggml-Ascend/examples/convert-llama2c-to-ggml/: CTestTestfile.cmake  Makefile  cmake_install.cmake
ggml-Ascend/examples/cvector-generator/: CTestTestfile.cmake  Makefile  cmake_install.cmake
ggml-Ascend/examples/embedding/: CTestTestfile.cmake  Makefile  cmake_install.cmake
ggml-Ascend/examples/eval-callback/: CTestTestfile.cmake  Makefile  cmake_install.cmake
ggml-Ascend/examples/export-lora/: CTestTestfile.cmake  (+2 more)
ggml-Ascend/pocs/: CTestTestfile.cmake  Makefile  cmake_install.cmake
ggml-Ascend/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
(+79 files in other folders)
